added support node 0.10.x
also drouped support for older node.
ps: i still don't understand why status is need in uv_after_work_cb

--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "fswin",
-  "version": "2.12.1230",
+  "version": "2.13.418",
   "description": "nodejs fs extensions for windows",
   "main": "fswin.node",
+  "engines": {
+    "node" : ">= 0.10"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "install": "node-gyp rebuild && move build\\Release\\fswin.node . && node-gyp clean"
