fix license issue

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "fswin",
-	"version": "3.23.311",
+	"version": "3.24.524",
 	"description": "nodejs fs extensions for windows",
 	"main": "index.js",
 	"types": "index.d.ts",
@@ -21,6 +21,6 @@
 		"ntfs"
 	],
 	"author": "Xiao Shen",
-	"license": "BSD",
+	"license": "MIT",
 	"readmeFilename": "readme.md"
 }
