--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,25 +9,14 @@ on:
 jobs:
   build:
     runs-on: windows-latest
-    strategy:
-      matrix:
-        node-version: [18.x, 20.x]
-        python-version: [3.10, 3.11, 3.12]
     steps:
-    
-    - name: Checkout repository
-      uses: actions/checkout@v2
-      
-    - name: Set up Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v2
-      with:
-        node-version: ${{ matrix.node-version }}
-    - name: Install msvc-dev-cmd
-      uses: ilammy/msvc-dev-cmd@v1.4.1
-      with:
-        arch: x64
-        
-    - name: build
-      run: |
-        node-gyp rebuild
-      shell: cmd
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+      - name: install build tools
+        run: npm -g install windows-build-tools
+        shell: cmd
+      - name: build
+        run: node-gyp rebuild
+        shell: cmd
