Update workflow steps in main.yml
Renamed 'build' step to 'Build' and added 'Test' step.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,10 @@ jobs:
       run: npm -g install node-gyp
       shell: cmd
         
-    - name: build
+    - name: Build
       run: node-gyp rebuild
+      shell: cmd
+
+    - name: Test
+      run: node test.js
       shell: cmd
